[gd_scene load_steps=3 format=2]

[ext_resource path="res://Projectiles/Projectile.gd" type="Script" id=1]
[ext_resource path="res://Collision Boxes/Hitbox.tscn" type="PackedScene" id=2]

[node name="Projectile" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]

[node name="Animator" type="AnimationPlayer" parent="."]

[node name="VisibilityNotifier" type="VisibilityNotifier2D" parent="."]
rect = Rect2( -4, -4, 8, 8 )

[node name="Hitbox" parent="." instance=ExtResource( 2 )]
collision_layer = 0
collision_mask = 2147483714
[connection signal="viewport_exited" from="VisibilityNotifier" to="." method="_on_VisibilityNotifier_viewport_exited"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_Hitbox_body_entered"]

[editable path="Hitbox"]
